<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Catch the Pig</string>
    <string name="new_game">New Game</string>
    <string name="msg_victory_pig">The Pig has escaped!</string>
    <string name="msg_victory_bird">The piggy was captured!</string>
    <string name="game_preferences_title">Play this like you want</string>
    <string name="single_game">Play Vs CPU</string>
    <string name="multiplayer_game">Multiplayer</string>
    <string name="game_preferences">Settings</string>
    <string name="credits">Credits</string>
    <string name="exit">Exit</string>
    <string name="pig">Pig</string>
    <string name="bird">Bird</string>
    <string name="difficulty">Difficulty</string>
    <string name="difficulty_description">How hard the Computer AI will play against you</string>
    <string name="difficulty_dialog_title">Enter some difficulty level between (1-7)</string>
    <string name="anyone_plays">Play any side</string>
    <string name="anyone_plays_description">Human player may move any side of the board?</string>
    <string name="anyone_plays_dialog_title">If you moves any side of the board the PC will try to moves the other</string>
    <string name="allow_sounds">Sounds</string>
    <string name="allow_sounds_description">Let play music and sound effects?</string>
    <string name="author">Eliecer Hdz Garbey (eliecerhdz@gmail.com)</string>
    <string name="credits_content_txt">This small game was made with educational purposes by Eliecer Hernandez Garbey.</string>
</resources>