<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top|center_vertical"
    android:background="@drawable/bg_main"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/MainBird"
        android:contentDescription="@string/bird"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="false"
        android:layout_centerVertical="false"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:src="@drawable/big_bird"
        android:layout_marginStart="@dimen/activity_vertical_margin" />

    <ImageView
        android:id="@+id/MainPig"
        android:contentDescription="@string/pig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:src="@drawable/pig_hidden"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_alignParentEnd="true" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <Button
            android:id="@+id/BtnSingleGame"
            style="@style/typo_catch_the_pig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/main_btn_rect"
            android:layout_centerHorizontal="true"
            android:text="@string/single_game" />

        <Button
            android:id="@+id/BtnPreferences"
            style="@style/typo_catch_the_pig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/BtnSingleGame"
            android:layout_centerHorizontal="true"
            android:background="@drawable/main_btn_rect"
            android:text="@string/game_preferences" />

        <Button
            android:id="@+id/BtnCredits"
            style="@style/typo_catch_the_pig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/BtnPreferences"
            android:layout_centerHorizontal="true" 
            android:background="@drawable/main_btn_rect"
            android:text="@string/credits" />

        <Button
            android:id="@+id/btnExit"
            style="@style/typo_catch_the_pig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/BtnCredits"
            android:layout_centerHorizontal="true" 
            android:background="@drawable/main_btn_rect"
            android:text="@string/exit" />
    </RelativeLayout>

</RelativeLayout>